unpackaged/main/default/objects/d_wh__Callout_Template__c/d_wh__Callout_Template__c.object-meta.xml
<CustomObject>
    <label>Callout Template</label>
    <nameField>
        <label>Callout Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Callout Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>