unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Advanced_Debug__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Advanced_Debug__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Debug</label>
    <type>Checkbox</type>
</CustomField>