unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Authorization_Type__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Authorization_Type__c</fullName>
    <label>Authorization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Basic (username and password)</fullName>
            </value>
            <value>
                <fullName>Bearer Token</fullName>
            </value>
            <value>
                <fullName>API Key (in header)</fullName>
            </value>
            <value>
                <fullName>API Key (in query param)</fullName>
            </value>
            <value>
                <fullName>Named Credentials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>