unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Authorization_Username__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Authorization_Username__c</fullName>
    <label>Authorization Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>