unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Caching_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Caching_Class_Name__c</fullName>
    <label>Caching Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>