unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Developer_Name__c</fullName>
    <label>Developer Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>