unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Follow_3XX_redirects__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Follow_3XX_redirects__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow 3XX redirects</label>
    <type>Checkbox</type>
</CustomField>