unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Has_Flow_Classes__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Has_Flow_Classes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Flow Classes</label>
    <type>Checkbox</type>
</CustomField>