unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Input_Parameters__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Input_Parameters__c</fullName>
    <label>Input Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>