unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Number_Of_Records__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Number_Of_Records__c</fullName>
    <label>Number Of Records</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Record</fullName>
            </value>
            <value>
                <fullName>Multiple Records</fullName>
                <label>Multiple Records (Batch)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>