unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Object__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>