unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Pre_Callout_Template__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Pre_Callout_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre-Callout Template</label>
    <referenceTo>d_wh__Callout_Template__c</referenceTo>
    <relationshipLabel>Callout Templates</relationshipLabel>
    <relationshipName>Callout_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>