unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__Response_Body_Format__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Response_Body_Format__c</fullName>
    <label>Response Body Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>application/json</fullName>
                <default>true</default>
                <label>JSON (application/json)</label>
            </value>
            <value>
                <fullName>application/x-www-form-urlencoded</fullName>
                <label>Form Encoded (application/x-www-form-urlencoded)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>