unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__String_as_Body__c.field-meta.xml
<CustomField>
    <fullName>d_wh__String_as_Body__c</fullName>
    <defaultValue>false</defaultValue>
    <label>String as Body</label>
    <type>Checkbox</type>
</CustomField>