unpackaged/main/default/objects/d_wh__Callout_Template__c/fields/d_wh__URL__c.field-meta.xml
<CustomField>
    <fullName>d_wh__URL__c</fullName>
    <label>URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>